--- a/documentacion.html
+++ b/documentacion.html
@@ -54,7 +54,7 @@
           <div class="flex-1">
             <!-- Inicio de Documentación -->
             <div class="mt-4 mb-6 prose max-w-none text-sm text-gray-800">
-              <h1 class="text-3xl text-black">Documentación</h1>
+              <h1 class="text-3xl text-black mb-2">Documentación</h1>
 
               <h2 class="text-2xl text-topaz-700">Topaz – Versión 25.9.1-SNAPSHOT</h2>
 
@@ -63,7 +63,7 @@
 
               <hr class="my-4">
 
-              <h3 class="text-xl mt-4">Novedades de esta versión</h3>
+              <h3 class="text-xl mt-2 mb-2">Novedades de esta versión</h3>
               <ul>
                 <li><strong>Dashboard “Inicio”:</strong> Información general de tu progreso, rachas y recordatorios.
                 </li>
@@ -77,6 +77,7 @@
                   </ul>
                 </li>
                 <li><strong>Estadísticas:</strong> Visualiza métricas de tus entradas con gráficos interactivos.</li>
+                <li><strong>Trabajo Interno:</strong> Escribe ensayos sobre temas importantes para ti, como la asertividad, autoestima, perseverancia, gratitud, etc. Organízalos con etiquetas.</li>
                 <li><strong>Meditación:</strong> Guarda y reproduce audios de meditación directamente en la app.</li>
                 <li><strong>Interfaz moderna:</strong> Tailwind CSS y JavaFX WebView para una experiencia tipo “nativa”
                   en Windows.</li>
@@ -84,7 +85,7 @@
 
               <hr class="my-4">
 
-              <h3 class="text-xl mt-4">Detalles técnicos</h3>
+              <h3 class="text-xl mt-2 mb-2">Detalles técnicos</h3>
               <ul>
                 <li><strong>Backend:</strong> Java 17+, Spring Boot 3.x</li>
                 <li><strong>Frontend:</strong> Thymeleaf + Tailwind CSS</li>
@@ -104,7 +105,7 @@
             <!-- Inicio del contenido de la guía de instalación -->
             <div class="mt-4 mb-6 prose max-w-none text-sm text-gray-800">
               <h1 class="text-2xl text-black">Guía de instalación</h1>
-              <h3 class="text-lg mt-2">Requisitos previos</h3>
+              <h3 class="text-xl mt-2 mb-2">Requisitos previos</h3>
               <ul>
                 <li><strong>Sistema operativo:</strong> Windows. Topaz solo funciona en Windows porque la base de datos
                   se guarda en la ruta fija <code>C:\Topaz\data</code>.</li>
@@ -116,7 +117,7 @@
                 <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>java -version</code></pre>
               </div>
 
-              <h4 class="text-xl mt-4">Ejecución</h4>
+              <h4 class="text-xl mt-8">Ejecución</h4>
               <p>Para ejecutar Topaz, abre <strong>cmd</strong>, navega al directorio donde está el <code>.jar</code> y
                 ejecuta:</p>
               <div class="my-2">
@@ -124,7 +125,7 @@
 java -jar topaz-25.9.1-SNAPSHOT.jar</code></pre>
               </div>
 
-              <h5 class="text-lg mt-4">Notas adicionales</h5>
+              <h5 class="text-xl mt-8">Notas adicionales</h5>
               <ul>
                 <li>Asegúrate de que el usuario de Windows que ejecute Topaz tenga permisos de lectura/escritura en
                   <code>C:\Topaz\data</code>.
