--- a/documentacion.html
+++ b/documentacion.html
@@ -87,7 +87,7 @@
 
               <h3 class="text-xl mt-2 mb-2">Detalles técnicos</h3>
               <ul>
-                <li><strong>Backend:</strong> Java 17+, Spring Boot 3.x</li>
+                <li><strong>Backend:</strong> Java 21, Spring Boot 3.4.1</li>
                 <li><strong>Frontend:</strong> Thymeleaf + Tailwind CSS</li>
                 <li><strong>UI Desktop:</strong> JavaFX WebView</li>
                 <li><strong>Base de datos:</strong> SQLite</li>
@@ -130,7 +130,7 @@ java -jar topaz-25.9.1-SNAPSHOT.jar</code></pre>
                 <li>Asegúrate de que el usuario de Windows que ejecute Topaz tenga permisos de lectura/escritura en
                   <code>C:\Topaz\data</code>.
                 </li>
-                <li>Si tienes problemas con la versión de Java, instala JDK 23 desde la web oficial de Oracle.</li>
+                <li>Si tienes problemas con la versión de Java, instala JDK 21 desde <a href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
               </ul>
             </div>
             <!-- Fin del contenido de la guía -->
