--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           </div>
           <div class="flex flex-col sm:flex-row gap-3">
             <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110"
-              href="https://github.com/selekode/Topaz/releases/download/v25.9.1-SNAPSHOT/topaz-25.9.1-SNAPSHOT.jar">Descargar
+              href="https://github.com/selekode/Topaz/releases/download/v26.1.0/topaz-26.1.0.jar">Descargar
               .jar</a>
             <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110" href="documentacion.html">Documentación</a>
           </div>
