--- a/documentacion.html
+++ b/documentacion.html
@@ -56,7 +56,7 @@
             <div class="mt-4 mb-6 prose max-w-none text-sm text-gray-800">
               <h1 class="text-3xl text-black mb-2">Documentación</h1>
 
-              <h2 class="text-2xl text-topaz-700">Topaz – Versión 25.9.1-SNAPSHOT</h2>
+              <h2 class="text-2xl text-topaz-700">Topaz – Versión 26.1</h2>
 
               <p>Topaz es una aplicación de diario personal que combina <strong>Spring Boot, Thymeleaf y JavaFX</strong>
                 para ofrecerte una experiencia fluida de registro de emociones, hábitos y reflexiones diarias.</p>
@@ -77,7 +77,8 @@
                   </ul>
                 </li>
                 <li><strong>Estadísticas:</strong> Visualiza métricas de tus entradas con gráficos interactivos.</li>
-                <li><strong>Trabajo Interno:</strong> Escribe ensayos sobre temas importantes para ti, como la asertividad, autoestima, perseverancia, gratitud, etc. Organízalos con etiquetas.</li>
+                <li><strong>Trabajo Interno:</strong> Escribe ensayos sobre temas importantes para ti, como la
+                  asertividad, autoestima, perseverancia, gratitud, etc. Organízalos con etiquetas.</li>
                 <li><strong>Meditación:</strong> Guarda y reproduce audios de meditación directamente en la app.</li>
                 <li><strong>Interfaz moderna:</strong> Tailwind CSS y JavaFX WebView para una experiencia tipo “nativa”
                   en Windows.</li>
@@ -91,7 +92,8 @@
                 <li><strong>Frontend:</strong> Thymeleaf + Tailwind CSS</li>
                 <li><strong>UI Desktop:</strong> JavaFX WebView</li>
                 <li><strong>Base de datos:</strong> SQLite</li>
-                <li><strong>Distribución:</strong> Fat JAR</li>
+                <li><strong>Distribución:</strong> .jar</li>
+                <li><strong>Tamaño:</strong> 107 MB</li>
               </ul>
             </div>
             <!-- Fin de Documentación -->
@@ -107,9 +109,9 @@
               <h1 class="text-2xl text-black">Guía de instalación</h1>
               <h3 class="text-xl mt-2 mb-2">Requisitos previos</h3>
               <ul>
-                <li><strong>Sistema operativo:</strong> Windows. Topaz solo funciona en Windows porque la base de datos
-                  se guarda en la ruta fija <code>C:\Topaz\data</code>.</li>
-                <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 23</strong> (JDK 23).
+                <li><strong>Sistema operativo:</strong>Al ser un .jar, Topaz es multiplataforma. Solo necesitas tener
+                  instalado el JVM.</li>
+                <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 21</strong> (JDK 21).
                   Comprueba
                   la instalación con:</li>
               </ul>
@@ -122,7 +124,7 @@
                 ejecuta:</p>
               <div class="my-2">
                 <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>cd C:\ruta\del\jar
-java -jar topaz-25.9.1-SNAPSHOT.jar</code></pre>
+java -jar topaz-26.1.jar</code></pre>
               </div>
 
               <h5 class="text-xl mt-8">Notas adicionales</h5>
@@ -130,7 +132,8 @@ java -jar topaz-25.9.1-SNAPSHOT.jar</code></pre>
                 <li>Asegúrate de que el usuario de Windows que ejecute Topaz tenga permisos de lectura/escritura en
                   <code>C:\Topaz\data</code>.
                 </li>
-                <li>Si tienes problemas con la versión de Java, instala JDK 21 desde <a href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
+                <li>Si tienes problemas con la versión de Java, instala JDK 21 desde <a class="text-teal-600"
+                    href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
               </ul>
             </div>
             <!-- Fin del contenido de la guía -->
