Added favicon and installation guide

--- a/documentacion.html
+++ b/documentacion.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="css/styles.css" />
 
@@ -108,10 +109,16 @@
             <div class="mt-4 mb-6 prose max-w-none text-sm text-gray-800">
               <h1 class="text-2xl text-black">Guía de instalación</h1>
               <h3 class="text-xl mt-2 mb-2">Requisitos previos</h3>
+              <p>Antes de poder ejecutar Topaz, necesitas tener Java instalado. Puedes descargar el JDK desde una de estás opciones:</p>
               <ul>
-                <li><strong>Sistema operativo:</strong>Al ser un .jar, Topaz es multiplataforma. Solo necesitas tener
-                  instalado el JVM.</li>
-                <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 21</strong> (JDK 21).
+                <li>- Puedes instalar la OpenJDK desde <a class="text-teal-600"
+                    href="https://jdk.java.net/">la web oficial de OpenJDK.</a></li>
+                <li>- Puedes instalar la OracleJDK desde <a class="text-teal-600"
+                    href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
+              <ul>
+                <li><strong>Sistema operativo:</strong> Al ser un .jar, Topaz es multiplataforma. Solo necesitas tener
+                  instalado el JDK.</li>
+                <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 21</strong> (JDK 21) o más reciente.
                   Comprueba
                   la instalación con:</li>
               </ul>
@@ -128,12 +135,7 @@ java -jar topaz-26.1.jar</code></pre>
               </div>
 
               <h5 class="text-xl mt-8">Notas adicionales</h5>
-              <ul>
-                <li>Asegúrate de que el usuario de Windows que ejecute Topaz tenga permisos de lectura/escritura en
-                  <code>C:\Topaz\data</code>.
-                </li>
-                <li>Si tienes problemas con la versión de Java, instala JDK 21 desde <a class="text-teal-600"
-                    href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
+              
               </ul>
             </div>
             <!-- Fin del contenido de la guía -->
@@ -147,7 +149,7 @@ java -jar topaz-26.1.jar</code></pre>
   <footer
     class="relative bottom-6 left-1/2 transform -translate-x-1/2 w-[95%] max-w-6xl text-center text-xs text-slate-500">
     <a href="http://selekode.github.io/SeanLeitch">
-      topaz — Sean Leitch © 2025</a>
+      topaz — Sean Leitch © 2026</a>
   </footer>
 
   <!-- Chart.js CDN -->
