--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="css/styles.css" />
 
@@ -240,7 +241,8 @@
             <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110"
               href="https://github.com/selekode/Topaz/releases/download/v26.1.0/topaz-26.1.0.jar">Descargar
               .jar</a>
-            <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110" href="documentacion.html">Documentación</a>
+            <a class="px-4 py-2 rounded-full bg-white/10 border hover:brightness-110"
+              href="documentacion.html">Documentación</a>
           </div>
         </div>
       </div>
@@ -251,7 +253,7 @@
   <footer
     class="relative bottom-6 left-1/2 transform -translate-x-1/2 w-[95%] max-w-6xl text-center text-xs text-slate-500">
     <a href="http://selekode.github.io/SeanLeitch">
-      topaz — Sean Leitch © 2025</a>
+      topaz — Sean Leitch © 2026</a>
   </footer>
 
   <!-- Chart.js CDN -->
