--- a/documentacion.html
+++ b/documentacion.html
@@ -135,7 +135,7 @@ java -jar topaz-26.1.jar</code></pre>
               </div>
 
               <h5 class="text-xl mt-8">Notas adicionales</h5>
-              
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/EbBTeiSylbM?si=clpEbaNr4lwvXBS5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </ul>
             </div>
             <!-- Fin del contenido de la guía -->
