--- a/documentacion.html
+++ b/documentacion.html
@@ -109,33 +109,40 @@
             <div class="mt-4 mb-6 prose max-w-none text-sm text-gray-800">
               <h1 class="text-2xl text-black">Guía de instalación</h1>
               <h3 class="text-xl mt-2 mb-2">Requisitos previos</h3>
-              <p>Antes de poder ejecutar Topaz, necesitas tener Java instalado. Puedes descargar el JDK desde una de estás opciones:</p>
+              <p>Antes de poder ejecutar Topaz, necesitas tener Java instalado. Puedes descargar el JDK desde una de
+                estás opciones:</p>
               <ul>
-                <li>- Puedes instalar la OpenJDK desde <a class="text-teal-600"
-                    href="https://jdk.java.net/">la web oficial de OpenJDK.</a></li>
+                <li>- Puedes instalar la OpenJDK desde <a class="text-teal-600" href="https://jdk.java.net/">la web
+                    oficial de OpenJDK.</a></li>
                 <li>- Puedes instalar la OracleJDK desde <a class="text-teal-600"
                     href="https://www.oracle.com/es/java/technologies/downloads/">la web oficial de Oracle.</a></li>
-              <ul>
-                <li><strong>Sistema operativo:</strong> Al ser un .jar, Topaz es multiplataforma. Solo necesitas tener
-                  instalado el JDK.</li>
-                <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 21</strong> (JDK 21) o más reciente.
-                  Comprueba
-                  la instalación con:</li>
-              </ul>
-              <div class="my-2">
-                <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>java -version</code></pre>
-              </div>
+                <ul>
+                  <li><strong>Sistema operativo:</strong> Al ser un .jar, Topaz es multiplataforma. Solo necesitas tener
+                    instalado el JDK.</li>
+                  <li><strong>Java:</strong> Se recomienda tener instalada la versión <strong>Java 21</strong> (JDK 21)
+                    o más reciente.
+                    Comprueba
+                    la instalación con:</li>
+                </ul>
+                <div class="my-2">
+                  <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>java -version</code></pre>
+                </div>
 
-              <h4 class="text-xl mt-8">Ejecución</h4>
-              <p>Para ejecutar Topaz, abre <strong>cmd</strong>, navega al directorio donde está el <code>.jar</code> y
-                ejecuta:</p>
-              <div class="my-2">
-                <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>cd C:\ruta\del\jar
+                <h4 class="text-xl mt-8">Ejecución</h4>
+                <p>Para ejecutar Topaz, abre <strong>cmd</strong>, navega al directorio donde está el <code>.jar</code>
+                  y
+                  ejecuta:</p>
+                <div class="my-2">
+                  <pre class="rounded-md p-3 border bg-gray-50 overflow-x-auto"><code>cd C:\ruta\del\jar
 java -jar topaz-26.1.jar</code></pre>
-              </div>
+                </div>
 
-              <h5 class="text-xl mt-8">Notas adicionales</h5>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/EbBTeiSylbM?si=clpEbaNr4lwvXBS5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h5 class="text-xl mt-8">Notas adicionales</h5>
+                <iframe src="https://www.youtube.com/embed/EbBTeiSylbM?si=clpEbaNr4lwvXBS5" title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                  class="w-[90%] aspect-video mx-auto"></iframe>
               </ul>
             </div>
             <!-- Fin del contenido de la guía -->
