--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Topaz - Diario de desarrollo personal y registro emocional</title>
+  <title>Topaz - Diario guiado y registro emocional</title>
 
   <!-- Fonts -->
   <link
@@ -55,11 +55,10 @@
         class="p-6 bg-white/70 backdrop-blur-md rounded-3xl shadow-xl border border-white/60 flex flex-col md:flex-row gap-6">
         <div class="flex-1 text-center md:text-center">
           <h1 class="text-3xl text-topaz-700 ubuntu-regular">topaz</h1>
-          <h2 class="text-4xl text-black mt-2">Tu viaje personal, en tus propias palabras</h2>
-          <p class="mt-3 text-slate-600 max-w-xl mx-auto md:mx-0">Topaz es una app que te ayudará en tu crecimiento
-            personal.</p>
-          <p class="mt-2 text-slate-600 max-w-xl mx-auto md:mx-0">Es un diario guiado que te ayudará a hacer
-            introspección que favorece en la regulación y el bienestar emocional.</p>
+          <h2 class="text-4xl text-black mt-2">Mejora tu vida escribiendo sobre ella</h2>
+          <p class="mt-3 text-slate-600 max-w-xl mx-auto md:mx-0">Topaz es una app que te hará a vivir una vida más plena.</p>
+          <p class="mt-2 text-slate-600 max-w-xl mx-auto md:mx-0">Es un diario guiado y registro emocional que te ayudará a hacer
+            introspección, medir tus actos y tus sentimientos. Esto favorece la regulación y el bienestar emocional.</p>
           <div class="mt-6 flex flex-col sm:flex-row justify-center md:justify-center gap-3">
             <a href="#download"
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-full bg-topaz-700 text-white font-semibold shadow hover:brightness-105">Descargar</a>
@@ -231,7 +230,7 @@
 
       <!-- CTA / Download -->
       <div id="download"
-        class="mt-10 p-6 rounded-2xl bg-gradient-to-r from-topaz-500 to-topaz-300 text-white shadow-lg">
+        class="mt-10 p-6 rounded-2xl bg-gradient-to-r from-topaz-900 to-topaz-800 text-white shadow-lg">
         <div class="flex flex-col md:flex-row items-center justify-between gap-4">
           <div class="text-center md:text-left">
             <h3 class="text-2xl font-semibold">Descarga Topaz</h3>
